--- a/index.html
+++ b/index.html
@@ -37,9 +37,19 @@
         </div>
       </nav>
       <div class="container-fluid">
-        <div class="row">
-          <!-- Coming soon -->
-        </div>
+        <uib-accordion ng-repeat="(id, sensor) in sensors | orderBy:'id'">
+          <div uib-accordion-group class="panel-default" is-open="true">
+            <uib-accordion-heading>
+              <span class="identifier"> {{sensor.type}} {{id}} <span class="caret"></span></span>
+            </uib-accordion-heading>
+            <table class="table table-hover">
+              <tr ng-repeat="(key, value) in sensor">
+                <th> {{key}} </th>
+                <td> {{value}} </td>
+              </tr>
+            </table>
+          </div>
+        </uib-accordion>
       </div>
       <footer class="footer">
         <a href="https://github.com/reelyactive/sensorscape">
