--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.0.2/ui-bootstrap-tpls.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.5.0/angular-sanitize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.7/socket.io.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.min.js"></script>
+    <script type="text/javascript" src="js/angular-chart.min.js"></script>
     <script type="text/javascript" src="js/socket.min.js"></script>
     <script type="text/javascript" src="js/beaver.js"></script>
     <script type="text/javascript" src="js/sensorscape.js"></script>
@@ -42,12 +44,24 @@
             <uib-accordion-heading>
               <span class="identifier"> {{sensor.type}} {{id}} <span class="caret"></span></span>
             </uib-accordion-heading>
-            <table class="table table-hover">
-              <tr ng-repeat="(key, value) in sensor">
-                <th> {{key}} </th>
-                <td> {{value}} </td>
-              </tr>
-            </table>
+            <div class="row">
+              <div class="col-md-6">
+                <table class="table table-hover">
+                  <tr ng-repeat="(key, value) in sensor.data">
+                    <th> {{key}} </th>
+                    <td> {{value}} </td>
+                  </tr>
+                </table>
+              </div>
+              <div class="col-md-6">
+                <canvas id="line" class="chart chart-line"
+                        ng-if="sensor.accData" chart-data="sensor.accData"
+                        chart-series="nearableAccSeries"
+                        chart-colors="nearableAccColors"
+                        chart-options="lineChartOptions">
+                </canvas>
+              </div>
+            </div>
           </div>
         </uib-accordion>
       </div>
