Added Minew accelerometer beacon

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
               <div class="col-md-6">
                 <canvas id="line" class="chart chart-line"
                         ng-if="sensor.accData" chart-data="sensor.accData"
-                        chart-series="nearableAccSeries"
-                        chart-colors="nearableAccColors"
+                        chart-series="sensorAccSeries"
+                        chart-colors="sensorAccColors"
                         chart-options="lineChartOptions">
                 </canvas>
               </div>
