--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
               </div>
               <div class="col-md-6">
                 <canvas id="line" class="chart chart-line"
-                        ng-if="sensor.accData" chart-data="sensor.accData"
-                        chart-series="sensorAccSeries"
-                        chart-colors="sensorAccColors"
+                        ng-if="sensor.datapoints"
+                        chart-data="sensor.datapoints"
+                        chart-series="sensor.series"
+                        chart-colors="chartColors"
                         chart-options="lineChartOptions">
                 </canvas>
               </div>
